--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./ap.html'>Andhra Pradesh</a></br>
-  <a href='./tg.html'>Telanga</a></br>
+  <a href='./tg.html'>Telangana</a></br>
   <a href='./kl.html'>Kerala</a></br>
   <a href='./uk.html'>Uttarakhand</a></br>
 </html>
