--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <a href='./gurugram.html'>Gurugram</a></br>
   <a href='./mumbai.html'>Mumbai</a></br>
   <a href='./pune.html'>Pune</a></br><br><br>
+  <a href='./chandigarh.html'>Chandigarh</a>
+  </br><br><br>
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./ap.html'>Andhra Pradesh</a></br>
