--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-  Hospitalization tracker for some Indian cities/states <br><br><br>
-  
+  Hospitalization tracker for some Indian cities/states <br><br>
+  <a href="https://twitter.com/shananalla/status/1478813872173760515">Thread</a> containing description, and sources for official data,auto-generated CSVs  
+  <br><br><br>
   <a href='./chennai.html'>Chennai</a></br>
   <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
   <a href='./bengaluru.html'>Bengaluru</a></br>
