--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <a href='./delhi.html'>Delhi</a></br>
   <a href='./gurugram.html'>Gurugram</a></br>
   <a href='./mumbai.html'>Mumbai</a></br>
-  <a href='./pune.html'>Pune</a>
+  <a href='./pune.html'>Pune</a></br>
   <a href='./chandigarh.html'>Chandigarh</a>
   </br><br><br>
   <a href='./mp.html'>Madhya Pradesh</a></br>
