--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <a href='./gurugram.html'>Gurugram</a></br>
   <a href='./mumbai.html'>Mumbai</a></br>
   <a href='./pune.html'>Pune</a></br>
+  <a href='./nagpur.html'>Nagpur</a></br>
+  <a href='./nashik.html'>Nashik</a></br>
+  <a href='./vadodara.html'>Vadodara</a></br>
+  <a href='./gandhinagar.html'>Gandhinagar</a></br>
   <a href='./chandigarh.html'>Chandigarh</a>
   </br><br><br>
   <a href='./mp.html'>Madhya Pradesh</a></br>
