--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   Hospitalization tracker for some Indian cities/states <br><br>
   <a href="https://twitter.com/shananalla/status/1478813872173760515">Thread</a> containing description, and sources for official data,auto-generated CSVs  
   <br><br><br>
+  Cities<br><br>
   <a href='./chennai.html'>Chennai</a></br>
   <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
   <a href='./bengaluru.html'>Bengaluru</a></br>
@@ -15,6 +16,7 @@
   <a href='./gandhinagar.html'>Gandhinagar</a></br>
   <a href='./chandigarh.html'>Chandigarh</a>
   </br><br><br>
+  States<br><br>
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./ap.html'>Andhra Pradesh</a></br>
