--- a/index.html
+++ b/index.html
@@ -2,25 +2,29 @@
   Hospitalization tracker for some Indian cities/states <br><br>
   <a href="https://twitter.com/shananalla/status/1478813872173760515">Thread</a> containing description, and sources for official data,auto-generated CSVs  
   <br><br><br>
-  Cities<br><br>
-  <a href='./chennai.html'>Chennai</a></br>
-  <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
-  <a href='./bengaluru.html'>Bengaluru</a></br>
+  Cities: <br><br>
+    
   <a href='./delhi.html'>Delhi</a></br>
   <a href='./gurugram.html'>Gurugram</a></br>
+  <a href='./chandigarh.html'>Chandigarh</a></br>
+  <a href='./vadodara.html'>Vadodara</a></br>
+  <a href='./gandhinagar.html'>Gandhinagar</a></br>
   <a href='./mumbai.html'>Mumbai</a></br>
   <a href='./pune.html'>Pune</a></br>
   <a href='./nagpur.html'>Nagpur</a></br>
-  <a href='./nashik.html'>Nashik</a></br>
-  <a href='./vadodara.html'>Vadodara</a></br>
-  <a href='./gandhinagar.html'>Gandhinagar</a></br>
-  <a href='./chandigarh.html'>Chandigarh</a>
+  <a href='./nashik.html'>Nashik</a></br>  
+  <a href='./bengaluru.html'>Bengaluru</a></br>
+  <a href='./chennai.html'>Chennai</a></br>
+  <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
+  
   </br><br><br>
-  States<br><br>
-  <a href='./mp.html'>Madhya Pradesh</a></br>
+  States: <br><br>
   <a href='./hp.html'>Himachal Pradesh</a></br>
+  <a href='./uttarakhand.html'>Uttarakhand</a></br>
+  <a href='./mp.html'>Madhya Pradesh</a></br>
+  <a href='./wb.html'>West Bengal</a></br>    
   <a href='./ap.html'>Andhra Pradesh</a></br>
   <a href='./telangana.html'>Telangana</a></br>
   <a href='./kerala.html'>Kerala</a></br>
-  <a href='./uttarakhand.html'>Uttarakhand</a></br>
+  
 </html>
