--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <br><br><br>
   Cities: <br><br>
     
+  <a href='./jammu.html'>Jammu</a></br>
   <a href='./delhi.html'>Delhi</a></br>
   <a href='./gurugram.html'>Gurugram</a></br>
   <a href='./chandigarh.html'>Chandigarh</a></br>
@@ -18,11 +19,13 @@
   <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
   
   </br><br><br>
-  States: <br><br>
+  States: <br><br>  
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./uttarakhand.html'>Uttarakhand</a></br>
+  <a href='./pb.html'>Punjab</a></br>
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./wb.html'>West Bengal</a></br>    
+  <a href='./goa.html'>Goa</a></br>    
   <a href='./ap.html'>Andhra Pradesh</a></br>
   <a href='./telangana.html'>Telangana</a></br>
   <a href='./kerala.html'>Kerala</a></br>
