--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   Hospitalization tracker for some Indian cities/states <br><br>
   <a href="https://twitter.com/shananalla/status/1478813872173760515">Thread</a> containing description, and sources for official data,auto-generated CSVs  
+  <a href="https://gist.github.com/grill05/014397cb7760dbab6e974b02827bb6d8">Data Sources</a>
   <br><br><br>
   Cities: <br><br>
     
