--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <a href='./ap.html'>Andhra Pradesh</a></br>
   <a href='./telangana.html'>Telangana</a></br>
   <a href='./kerala.html'>Kerala</a></br>
+ 
+ 
+  <a href='./misc.html'>miscellaneous..</a></br>
   
 
 </html>
