--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./uttarakhand.html'>Uttarakhand</a></br>
   <a href='./pb.html'>Punjab</a></br>
+  <a href='./bihar.html'>Bihar</a></br>
+  <a href='./rajasthan.html'>Rajasthan</a></br>
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./wb.html'>West Bengal</a></br>    
   <a href='./goa.html'>Goa</a></br>    
