--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <a href='./jammu.html'>Jammu</a></br>
   <a href='./delhi.html'>Delhi</a></br>
   <a href='./gurugram.html'>Gurugram</a></br>
+  <a href='./ludhiana.html'>Ludhiana</a></br>
   <a href='./chandigarh.html'>Chandigarh</a></br>
   <a href='./vadodara.html'>Vadodara</a></br>
   <a href='./gandhinagar.html'>Gandhinagar</a></br>
