--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <a href='./gurugram.html'>Gurugram</a></br>
   <a href='./ludhiana.html'>Ludhiana</a></br>
   <a href='./chandigarh.html'>Chandigarh</a></br>
+  <a href='./jamshedpur.html'>Jamshedpur (Jharkhand)</a></br>
   <a href='./vadodara.html'>Vadodara</a></br>
   <a href='./gandhinagar.html'>Gandhinagar</a></br>
   <a href='./mumbai.html'>Mumbai</a></br>
