--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <a href='./uttarakhand.html'>Uttarakhand</a></br>
   <a href='./pb.html'>Punjab</a></br>
   <a href='./bihar.html'>Bihar</a></br>
+  <a href='./jharkhand.html'>Jharkhand</a></br>
   <a href='./rajasthan.html'>Rajasthan</a></br>
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./wb.html'>West Bengal</a></br>    
