--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
   <a href='./pb.html'>Punjab</a></br>
   <a href='./bihar.html'>Bihar</a></br>
   <a href='./jharkhand.html'>Jharkhand</a></br>
-  <a href='./rajasthan.html'>Rajasthan</a></br>
-  <a href='./mp.html'>Madhya Pradesh</a></br>
+  <a href='./rajasthan.html'>Rajasthan</a></br>  
   <a href='./wb.html'>West Bengal</a></br>    
+  <a href='./meghalaya.html'>Meghalaya</a></br>    
+  <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./goa.html'>Goa</a></br>    
   <a href='./ap.html'>Andhra Pradesh</a></br>
   <a href='./telangana.html'>Telangana</a></br>
