--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <a href='./rajasthan.html'>Rajasthan</a></br>  
   <a href='./wb.html'>West Bengal</a></br>    
   <a href='./meghalaya.html'>Meghalaya</a></br>    
+  <a href='./manipur.html'>Manipur</a></br>    
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./goa.html'>Goa</a></br>    
   <a href='./ap.html'>Andhra Pradesh</a></br>
