--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./uttarakhand.html'>Uttarakhand</a></br>
   <a href='./pb.html'>Punjab</a></br>
+  <a href='./up.html'>Uttar Pradesh</a></br>
   <a href='./bihar.html'>Bihar</a></br>
   <a href='./jharkhand.html'>Jharkhand</a></br>
   <a href='./rajasthan.html'>Rajasthan</a></br>  
