--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   Hospitalization tracker for some Indian cities/states <br><br>
   <a href="https://twitter.com/shananalla/status/1478813872173760515">Thread</a> containing description, and sources for official data,auto-generated CSVs  
   <a href="https://gist.github.com/grill05/014397cb7760dbab6e974b02827bb6d8">Data Sources</a>
-  <br><br><br>
-  Cities: <br><br>
+  <br><br>
+  Cities: <br>
     
   <a href='./jammu.html'>Jammu</a></br>
   <a href='./delhi.html'>Delhi</a></br>
@@ -21,7 +21,7 @@
   <a href='./chennai.html'>Chennai</a></br>
   <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
   
-  </br><br><br>
+  </br>
   States: <br><br>  
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./uttarakhand.html'>Uttarakhand</a></br>
