--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
   
   </br>
-  States: <br><br>  
+  States: <br>  
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./uttarakhand.html'>Uttarakhand</a></br>
   <a href='./pb.html'>Punjab</a></br>
@@ -40,5 +40,6 @@
   <a href='./kerala.html'>Kerala</a></br>
  
   <a href='./misc.html'>miscellaneous..</a></br>
+
 
 </html>
