--- a/index.html
+++ b/index.html
@@ -5,21 +5,14 @@
   <br><br>
   Cities: <br>
     
-  <a href='./jammu.html'>Jammu</a></br>
-  <a href='./delhi.html'>Delhi</a></br>
-  <a href='./gurugram.html'>Gurugram</a></br>
-  <a href='./ludhiana.html'>Ludhiana</a></br>
-  <a href='./chandigarh.html'>Chandigarh</a></br>
+  <a href='./jammu.html'>Jammu</a> </br>
+  <a href='./delhi.html'>Delhi</a> ,  <a href='./gurugram.html'>Gurugram</a></br>
+  <a href='./ludhiana.html'>Ludhiana</a>,  <a href='./chandigarh.html'>Chandigarh</a></br>
   <a href='./jamshedpur.html'>Jamshedpur (Jharkhand)</a></br>
-  <a href='./vadodara.html'>Vadodara</a></br>
-  <a href='./gandhinagar.html'>Gandhinagar</a></br>
-  <a href='./mumbai.html'>Mumbai</a></br>
-  <a href='./pune.html'>Pune</a></br>
-  <a href='./nagpur.html'>Nagpur</a></br>
-  <a href='./nashik.html'>Nashik</a></br>  
+  <a href='./vadodara.html'>Vadodara</a> ,  <a href='./gandhinagar.html'>Gandhinagar</a></br>
+  <a href='./mumbai.html'>Mumbai</a> ,  <a href='./pune.html'>Pune</a>,   <a href='./nagpur.html'>Nagpur</a> ,  <a href='./nashik.html'>Nashik</a></br>  
   <a href='./bengaluru.html'>Bengaluru</a></br>
-  <a href='./chennai.html'>Chennai</a></br>
-  <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
+  <a href='./chennai.html'>Chennai</a> ,  <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
   
   </br>
   States: <br>  
@@ -39,6 +32,5 @@
   <a href='./telangana.html'>Telangana</a></br>
   <a href='./kerala.html'>Kerala</a></br>
  
-  <a href='./misc.html'>miscellaneous..</a></br>
-
+  
 </html>
