--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
   <a href='./jharkhand.html'>Jharkhand</a></br>
   <a href='./rajasthan.html'>Rajasthan</a></br>  
   <a href='./wb.html'>West Bengal</a></br>    
-  <a href='./meghalaya.html'>Meghalaya</a></br>    
-  <a href='./manipur.html'>Manipur</a></br>    
   <a href='./mp.html'>Madhya Pradesh</a></br>
   <a href='./goa.html'>Goa</a></br>    
+  <a href='./meghalaya.html'>Meghalaya</a>,   <a href='./manipur.html'>Manipur</a>,  <a href='./nagaland.html'>Nagaland</a></br>    
   <a href='./ap.html'>Andhra Pradesh</a></br>
   <a href='./telangana.html'>Telangana</a></br>
   <a href='./kerala.html'>Kerala</a></br>
