Add ladakh, puducherry and chhattisgarh to tracker

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <a href="https://twitter.com/shananalla/status/1478813872173760515">Thread</a> containing description, and sources for official data,auto-generated CSVs  
   <a href="https://gist.github.com/grill05/014397cb7760dbab6e974b02827bb6d8">Data Sources</a>
   <br><br>
-  Cities: <br>
+  <b>Cities/UTs: </b> 
+  <br>
+  <br>
     
+  <a href='./ladakh.html'>Ladakh</a> </br>
   <a href='./jammu.html'>Jammu</a> </br>
   <a href='./delhi.html'>Delhi</a> ,  <a href='./gurugram.html'>Gurugram</a></br>
   <a href='./ludhiana.html'>Ludhiana</a>,  <a href='./chandigarh.html'>Chandigarh</a></br>
@@ -13,9 +16,14 @@
   <a href='./mumbai.html'>Mumbai</a> ,  <a href='./pune.html'>Pune</a>,   <a href='./nagpur.html'>Nagpur</a> ,  <a href='./nashik.html'>Nashik</a></br>  
   <a href='./bengaluru.html'>Bengaluru</a></br>
   <a href='./chennai.html'>Chennai</a> ,  <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
+  <a href='./puducherry.html'>Puducherry</a>
   
-  </br>
-  States: <br>  
+  <br/>
+  <br/>
+
+  <b>States: </b>
+  <br>
+  <br>
   <a href='./hp.html'>Himachal Pradesh</a></br>
   <a href='./uttarakhand.html'>Uttarakhand</a></br>
   <a href='./pb.html'>Punjab</a></br>
@@ -25,6 +33,7 @@
   <a href='./rajasthan.html'>Rajasthan</a></br>  
   <a href='./wb.html'>West Bengal</a></br>    
   <a href='./mp.html'>Madhya Pradesh</a></br>
+  <a href='./chhattisgarh.html'>Chhattisgarh</a></br>
   <a href='./goa.html'>Goa</a></br>    
   <a href='./meghalaya.html'>Meghalaya</a>,   <a href='./manipur.html'>Manipur</a>,  <a href='./nagaland.html'>Nagaland</a></br>    
   <a href='./ap.html'>Andhra Pradesh</a></br>
