--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href='./ludhiana.html'>Ludhiana</a>,  <a href='./chandigarh.html'>Chandigarh</a></br>
   <a href='./jamshedpur.html'>Jamshedpur (Jharkhand)</a></br>
   <a href='./vadodara.html'>Vadodara</a> ,  <a href='./gandhinagar.html'>Gandhinagar</a></br>
-  <a href='./mumbai.html'>Mumbai</a> ,  <a href='./pune.html'>Pune</a>,   <a href='./nagpur.html'>Nagpur</a> ,  <a href='./nashik.html'>Nashik</a></br>  
+  <a href='./mumbai.html'>Mumbai</a> ,   <a href='./thane.html'>Thane</a>,  <a href='./pune.html'>Pune</a>,   <a href='./nagpur.html'>Nagpur</a> ,  <a href='./nashik.html'>Nashik</a></br>  
   <a href='./bengaluru.html'>Bengaluru</a></br>
   <a href='./chennai.html'>Chennai</a> ,  <a href='./rotn.html'>Other districts of Tamil Nadu</a></br>
   <a href='./puducherry.html'>Puducherry</a>
